<resources>
    <string name="event_list_item_caption">events</string>
    <string name="checkinout_list_item_caption">check in &amp; out</string>
    <string name="portfolio_list_item_caption">portfolio</string>
    <string name="everydayHealth_list_item_caption">every day health</string>

    <string name="text_btn_add">Add</string>
    <string name="text_btn_download">Download</string>
    <string name="text_create_event">%1$s created an event %2$s on %3$s</string>
    <string name="share_feedback">Share feedback</string>

    <string name="news_menu_label">News</string>
    <string name="checkin_menu_label">Check In</string>
    <string name="inbox_menu_label">Inbox</string>
    <string name="portfolio_menu_label">Portfolio</string>
    <string name="viewmore_menu_label">More</string>

    <!--Notification-->
    <string name="channel_name">LittleLives</string>
    <string name="channel_desc">Downloading file: %1$s</string>
    <string name="channel_id">channel_100</string>

    <string name="processing">Processing</string>
    <string name="please_wait">Please wait...</string>

    <!--Drawer menu-->
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>